# Exploration

./: .gitignore  pyproject.toml
Atlas_Vectorsearch/MovieRecs/: movie_recs.py  movie_recs_usingAPI.py  remove_plot_embd.py
Decorators/: arg_to_my_function.py  decorator_using_class.py  memory_and_speed.py  my_function.py
LangGraph/: MessageGraph.py  StateGraph.py
MongoDB/: decode_checkpoint.py
Packaging-ml-models/prediction_model/: pipeline.py  predict.py  requirements.txt  training_pipeline.py
Packaging-ml-models/prediction_model/processing/: preprocessing.py
RAG/vectorstore/: base_vectorstore.py  constants.py  qdrant_service.py  vectorstore_service.py
Requirements_Generator/: requirements.py
Unoserver/: unoconvert.py
config/: config_python.py
node/: tcp_server.js  udp_server.js
python_config/: config_python.py
